--- a/lab/MailCat/MailCatCloud/cloud/views/template.html
+++ b/lab/MailCat/MailCatCloud/cloud/views/template.html
@@ -66,7 +66,7 @@
   <p style="margin-top: 0; font-size: 15px !important; color: #60666d; font-family: sans-serif; line-height: 24px !important; margin-bottom: 24px !important;">
     信件正在运送的路途中了<br/>
     预计需要 {{dayLeft}} 天到达<br/>
-    欢迎到MailCat 查看完整信件
+    欢迎到MailCat 查看<strong >完整信件</strong>
     </p>
 
 <div class="btn" style="margin-bottom: 27px !important;"><a href="http://lanstonpeng.github.io" cs-button="" style="mso-hide: all; text-decoration: none; border-radius: 4px; display: block !important; font-size: 14px !important; font-weight: 700; line-height: 21px !important; text-align: center; letter-spacing: 0.04em !important; color: #fff; box-shadow: 0 3px 0 #363636; font-family: sans-serif; background-color: #444; padding: 9px 22px 8px; border: 0;">去MailCat查看</a></div>
